<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="5dp"
    android:background="@color/white">

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="@dimen/cardview_item_cornerRadius"
        android:elevation="@dimen/cardview_item_elevation"
        android:layout_marginStart="@dimen/cardview_item_margin"
        android:layout_marginEnd="@dimen/cardview_item_margin"
        android:layout_marginTop="@dimen/cardview_item_margin"
        android:layout_marginBottom="@dimen/cardview_item_margin"
        app:contentPadding="@dimen/cardview_item_contentPadding"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
    
    <ImageView
        android:id="@+id/ivItemImage"
        android:layout_width="@dimen/item_image_view_size"
        android:layout_height="@dimen/item_image_view_size"
        android:layout_gravity="center"
        android:contentDescription="@string/image"
        android:src="@drawable/item_placeholder"/>

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tv_margin_top"
        android:text="@string/name"
        android:textStyle="bold"
        android:textSize="@dimen/item_name_text_size"/>

    <TextView
        android:id="@+id/tvBrand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tv_margin_top"
        android:text="@string/brand"
        android:textStyle="bold"
        android:textSize="@dimen/tv_size"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tv_margin_top"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvPriceSign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_sign"
            android:textSize="@dimen/tv_size"/>

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textSize="@dimen/tv_size"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tv_margin_top"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvCategoryLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textStyle="bold"
            android:textSize="@dimen/tv_size"/>

        <TextView
            android:id="@+id/tvCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="@dimen/tv_size"/>

    </LinearLayout>

     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvColorOptions"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="3dp"
         android:orientation="horizontal"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>